--- a/composer.json
+++ b/composer.json
@@ -62,7 +62,12 @@
     "scripts": {
         "auto-scripts": {
             "cache:clear": "symfony-cmd",
-            "assets:install %PUBLIC_DIR%": "symfony-cmd"
+            "assets:install %PUBLIC_DIR%": "symfony-cmd",
+            "post-install-cmd": [
+              "php artisan clear-compiled",
+              "php artisan optimize",
+              "chmod -R 777 public/"
+            ]
         },
         "post-install-cmd": [
             "@auto-scripts"
@@ -79,5 +84,8 @@
             "allow-contrib": false,
             "require": "4.1.*"
         }
-    }
+    },
+
+
+
 }
